facet-derive-emit/tests/snapshots/codegen__tuple_struct_with_renamed_field.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Point(\n            #[facet(rename = \"x_coordinate\")]\n            f32,\n            #[facet(rename = \"y_coordinate\")]\n            f32,\n            #[facet(rename = \"z_coordinate\")]\n            f32,\n        );\n        \"#)"
---
#[used]
static POINT_SHAPE: &'static ::facet::Shape = <Point as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl ::facet::Facet for Point {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("0")
                    .shape(|| ::facet::shape_of(&|s: &Point| &s.0))
                    .offset(::core::mem::offset_of!(Point, 0))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[::facet::FieldAttribute::Rename("x_coordinate")])
                    .build(),
                ::facet::Field::builder()
                    .name("1")
                    .shape(|| ::facet::shape_of(&|s: &Point| &s.1))
                    .offset(::core::mem::offset_of!(Point, 1))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[::facet::FieldAttribute::Rename("y_coordinate")])
                    .build(),
                ::facet::Field::builder()
                    .name("2")
                    .shape(|| ::facet::shape_of(&|s: &Point| &s.2))
                    .offset(::core::mem::offset_of!(Point, 2))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[::facet::FieldAttribute::Rename("z_coordinate")])
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Point"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::Struct::builder()
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
